Fri Dec  4 23:18:26 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        Merged in valuetype repository id and value indirection support
        on both input and output streams from OCI (RT #13502).

        * MPC/config/valuetype_out_indirection.mpb:

          Added mpc feature to optionally turn on the indirection
          support on valuetype outgoing message. It defaults to
          be enabled. To be compatible with previous version TAO,
          run mwc.pl with
          "-features valuetype_out_indirection=0" to disable it.

        * TAO_IDL/be/be_visitor_valuebox/valuebox_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:

          Modified the valuetype unmarshall method to support
          value indirection.

        * tao/Intrusive_Ref_Count_Object_T.h:
        * tao/Intrusive_Ref_Count_Object_T.inl:
        * tao/Intrusive_Ref_Count_Object_T.cpp:

          Added wrapper for non reference counted data type to provide reference
          counting feature so it can use the TAO_Intrusive_Ref_Count_Handle
          smart-pointer.

        * tao/CDR.h:
        * tao/CDR.inl:
        * tao/CDR.cpp:

          - Used smart point hash map for indirection maps (repository id, value
            and codebase_url). The maps map the already read/written values.
          - Added methods to access/update indirection maps.
          - The maps are only created when valuetype data is marshalled or
            demarshalled.
          - Added offset(pos) method to calculate the offset between provided
            position and current wr_ptr.

        * tao/Valuetype/ValueBase.h:
        * tao/Valuetype/ValueBase.inl:
        * tao/Valuetype/ValueBase.cpp:

          - Added repository id and value indirection support on both input
            and output stream.
          - The codebase_url indirection on input stream was also added but
            not tested. TAO does not support codebase currently and the codebase